--- a/src/main/java/view/Login.form
+++ b/src/main/java/view/Login.form
@@ -60,13 +60,14 @@
                               <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                               <Component id="txtLogin" min="-2" pref="162" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="1" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="txtSenha" alignment="1" min="-2" pref="160" max="-2" attributes="0"/>
-                                  <Component id="jButton1" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="txtSenha" min="-2" pref="160" max="-2" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
+                          <Component id="jButton1" min="-2" pref="85" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="103" max="32767" attributes="0"/>
